--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,42 @@
+---
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Dieghoatc</title>
+    <meta name="description" content="Diegho - Welcome to my word" />
+    <meta name="keywords" content="Diegho, Dieghoatc, Dieghoatc.com" />
+    <meta name="author" content="Dieghoatc" />
+    <meta name="robots" content="index, follow" />
+  </head>
+  <body>
+    <div class="min-h-screen w-full">
+      <slot />
+    </div>
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  body {
+    position: relative;
+    min-height: 60vh;
+    color: white;
+    background-image: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0) 60%,
+        rgba(0, 0, 0, 0.95) 100%
+      ),
+      linear-gradient(-45deg, #292800, #222200 50%, #1a1a1a 50%, #000);
+    background-size:
+      auto,
+      2px 2px;
+    background-repeat: repeat;
+    background-position: center;
+  }
 </style>
