feat: add resume and experience timeline

--- a/src/components/v2/Abc.astro
+++ b/src/components/v2/Abc.astro
@@ -26,35 +26,56 @@ import typeorm from "@/assets/typeorm.svg";
     </h2>
     <p class="text-gray-400">Everything about Ground Transport in Colombia.</p>
     <div class="mt-2 flex gap-2 flex-wrap">
-      <div class="flex gap-0.5 justify-center items-center">
+      <div class="flex gap-1 justify-center items-center">
         <img class="logo" src={nextjs.src} alt="nextjs logo" />
         <span class="text-[12px]">Next.js</span>
       </div>
-      <div class="flex gap-0.5 justify-center items-center">
+      <div class="flex gap-1 justify-center items-center">
         <img class="logo" src={nestjs.src} alt="nestjs logo" />
         <span class="text-[12px]">Nest.js</span>
       </div>
-      <div class="flex gap-0.5 justify-center items-center">
+      <div class="flex gap-1 justify-center items-center">
         <img class="logo" src={tailwindcss.src} alt="nestjs logo" />
         <span class="text-[12px]">Tailwind CSS</span>
       </div>
-      <div class="flex gap-0.5 justify-center items-center">
+      <div class="flex gap-1 justify-center items-center">
         <img class="logo" src={typescript.src} alt="nestjs logo" />
         <span class="text-[12px]">TypeScript</span>
       </div>
-      <div class="flex gap-0.5 justify-center items-center">
+      <div class="flex gap-1 justify-center items-center">
         <img class="logo" src={typeorm.src} alt="nestjs logo" />
         <span class="text-[12px]">TypeORM</span>
       </div>
-      <div class="flex gap-0.5 justify-center items-center">
+      <div class="flex gap-1 justify-center items-center">
         <img class="logo" src={postgresql.src} alt="nestjs logo" />
         <span class="text-[12px]">PostgreSQL</span>
       </div>
-      <div class="flex gap-0.5 justify-center items-center">
+      <div class="flex gap-1 justify-center items-center">
         <img class="logo" src={redis.src} alt="nestjs logo" />
         <span class="text-[12px]">Redis</span>
       </div>
     </div>
+    <a href="https://autobusesdecolombia.com" target="_blank">
+      <div class="flex gap-2 mt-5">
+        <div>
+          <span class="text-amber-300">Live</span>
+        </div>
+        <div>
+          <svg
+            width="15"
+            height="15"
+            viewBox="0 0 15 15"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            ><path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M12 13C12.5523 13 13 12.5523 13 12V3C13 2.44771 12.5523 2 12 2H3C2.44771 2 2 2.44771 2 3V6.5C2 6.77614 2.22386 7 2.5 7C2.77614 7 3 6.77614 3 6.5V3H12V12H8.5C8.22386 12 8 12.2239 8 12.5C8 12.7761 8.22386 13 8.5 13H12ZM9 6.5C9 6.5001 9 6.50021 9 6.50031V6.50035V9.5C9 9.77614 8.77614 10 8.5 10C8.22386 10 8 9.77614 8 9.5V7.70711L2.85355 12.8536C2.65829 13.0488 2.34171 13.0488 2.14645 12.8536C1.95118 12.6583 1.95118 12.3417 2.14645 12.1464L7.29289 7H5.5C5.22386 7 5 6.77614 5 6.5C5 6.22386 5.22386 6 5.5 6H8.5C8.56779 6 8.63244 6.01349 8.69139 6.03794C8.74949 6.06198 8.80398 6.09744 8.85143 6.14433C8.94251 6.23434 8.9992 6.35909 8.99999 6.49708L8.99999 6.49738"
+              fill="currentColor"></path></svg
+          >
+        </div>
+      </div>
+    </a>
   </div>
 </data>
 
