--- a/src/sections/v2/Hero.astro
+++ b/src/sections/v2/Hero.astro
@@ -8,7 +8,7 @@
     Turning great ideas into functional realities
   </h1>
   <p class="text-gray-300 text-xl text-center">
-    Best practices for user experience and web development, priority to
+    Best practices for user experience, mobile and web development, priority to
     accessibility and performance.
   </p>
   <div>
