--- a/src/sections/v2/Footer.astro
+++ b/src/sections/v2/Footer.astro
@@ -1,3 +1,9 @@
-<footer>
-    <p>Footer</p>
+<footer class="w-full h-[100px] mt-20 bg-black">
+  <div class="mx-10 text-[12px] flex justify-center items-center text-center">
+    <p>
+      <span class="text-gray-300">@ 2025 </span><span
+        >/ Diego Armando Tejedor Cortés aka
+      </span><span class="text-yellow-500">Dieghoatc</span> / Build with ❤️ Astro 
+    </p>
+  </div>
 </footer>
