--- a/src/sections/v2/Projects.astro
+++ b/src/sections/v2/Projects.astro
@@ -2,7 +2,7 @@
 import Abc from "@/components/v2/Abc.astro";
 ---
 
-<section>
+<section class="mb-8">
   <div class="flex flex-wrap gap-4 mx-8">
     <article>
       <Abc />
