feat: add about page

--- a/src/sections/v2/Resume.astro
+++ b/src/sections/v2/Resume.astro
@@ -1,31 +1,39 @@
 <section class="mx-3 my-8">
-  <h3 class="font-bold text-3xl my-14">
-    For ideas and imagination to a reality software solutions.
-  </h3>
-  <p class="text-[18px]">
-    I´m a Full-Stack Software Developer living in Bogotá <span
-      class="text-[8px]">COL</span
-    > 🇨🇴 , working for create and build projects. Experience with making digital
-    experiences for easy user experiences. I'm focus on improve my skills as a Mobile
-    Developer and create the next Uber 🤪 .
-  </p>
-  <a href="/v2/about">
-    <div class="flex items-center gap-3 mt-4 text-amber-300">
-      <div class="text-[12px]">About Me</div>
-      <div class="flex justify-center items-center">
-        <svg
-          width="15"
-          height="15"
-          viewBox="0 0 15 15"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          ><path
-            d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
-            fill="currentColor"
-            fill-rule="evenodd"
-            clip-rule="evenodd"></path></svg
-        >
+  <div class="md:grid md:grid-cols-5 gap-3 items-center">
+    <div class="col-span-3">
+      <h3 class="font-bold text-3xl md:text-5xl my-14">
+        For ideas and imagination to a reality software solutions.
+      </h3>
+    </div>
+    <div class="col-span-2">
+      <p class="text-[18px]">
+        I´m a Full-Stack Software Developer living in Bogotá <span
+          class="text-[8px]">COL</span
+        > 🇨🇴 , working for create and build projects. Experience with making digital
+        experiences for easy user experiences. I'm focus on improve my skills as
+        a Mobile Developer for create the next Uber 🤪 .
+      </p>
+      <div class="pointer-events-auto">
+        <a href="/about" class="pointer">
+          <div class="flex items-center gap-3 mt-4 text-amber-300">
+            <div class="text-[12px]">About Me</div>
+            <div class="flex justify-center items-center">
+              <svg
+                width="15"
+                height="15"
+                viewBox="0 0 15 15"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                ><path
+                  d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
+                  fill="currentColor"
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"></path></svg
+              >
+            </div>
+          </div>
+        </a>
       </div>
     </div>
-  </a>
+  </div>
 </section>
