--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,10 +19,10 @@
 html,
 body {
   margin: 0;
+  padding: 0;
   width: 100%;
-  height: 100%;
-  background-color: #000;
   cursor: url("../assets/pointer.png"), auto;
-  font-family: "Geist Variable", sans-serif;
+  font-family: "Geist Variable", sans-serif;  
+  color: white;  
+  background-color: #000;
 }
-
