--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import Header from "@/sections/v2/Header.astro";
 
-import "../styles/global.css";
+import "@/styles/global.css";
+const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -11,32 +11,24 @@ import "../styles/global.css";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Dieghoatc</title>
+    <title>{title}</title>
     <meta name="description" content="Diegho - Welcome to my word" />
     <meta name="keywords" content="Diegho, Dieghoatc, Dieghoatc.com" />
     <meta name="author" content="Dieghoatc" />
     <meta name="robots" content="index, follow" />
   </head>
   <body>
-    <div class="min-h-screen w-full">
-      <slot />
-      <div
-        class="fixed bottom-2 md:top-0
-       w-full flex justify-center items-center z-50"
-      >
-        <Header />
-      </div>
+    <div class="min-h-dvh w-full">
+      <slot />      
     </div>
   </body>
 </html>
 
 <style is:global>
-  @tailwind;
+  @import "tailwindcss";
 
   body {
-    position: relative;
-    min-height: 60vh;
-    color: white;
+    height: 60vh;
     background-image: linear-gradient(
         to bottom,
         rgba(0, 0, 0, 0) 60%,
@@ -50,3 +42,6 @@ import "../styles/global.css";
     background-position: center;
   }
 </style>
+
+
+
