--- a/src/sections/v2/Header.astro
+++ b/src/sections/v2/Header.astro
@@ -5,7 +5,7 @@ import logo from "@/assets/logo.svg";
 <header>
   <nav class="navbar">
     <div class="home">
-      <a href="/v2">
+      <a href="/">
         <svg
           class="svg-icon"
           width="15"
@@ -41,7 +41,7 @@ import logo from "@/assets/logo.svg";
       <img src={logo.src} alt="Logo" class="w-[30px]" />
     </div>
     <div>
-      <a href="/v2/about">
+      <a href="/about">
         <svg
           class="svg-icon"
           width="15"
@@ -62,7 +62,7 @@ import logo from "@/assets/logo.svg";
 
 <style>
   .navbar {
-    background: hsla(0, 0%, 7%, 0.637);
+    background: hsla(0, 0%, 0%, 0.8);
     width: 100%;
     display: flex;
     justify-content: space-between;
