feat: add experience

--- a/src/sections/v2/Experience.astro
+++ b/src/sections/v2/Experience.astro
@@ -1,7 +1,7 @@
 <section class="m-3">
-  <h2 class="text-2xl font-bold mb-4">Experience</h2>
-  <article class="m-3">
-    <div class="flex gap-4">
+  <h2 class="text-2xl font-bold mb-4">Work Experience</h2>
+  <ul class="m-3">
+    <li class="flex gap-4">
       <div class="relative">
         <div class="h-full w-0.5 bg-gray-700 opacity-50"></div>
         <div
@@ -11,9 +11,11 @@
       </div>
       <div>
         <span class="text-[12px] text-gray-400 mb-2">2020 - 2022</span>
-        <h3 class="text-[18px] font-bold mb-1">Frontend Developer</h3>
+        <h3 class="text-[18px] font-bold mb-1 text-amber-300">
+          Junior Front-End Developer
+        </h3>
         <div class="flex gap-2 text-gray-500 mb-4">
-          <span class="text-[14px] text-gray-400">R4</span>
+          <span class="text-[14px] text-gray-400">R5</span>
           <svg
             width="15"
             height="15"
@@ -27,18 +29,58 @@
               clip-rule="evenodd"></path></svg
           >
         </div>
-
-        <p class="text-[14px] text-gray-300">
+        <p class="text-[14px] text-gray-300 mb-2">
           Development solutions for public web applications. Using technologies
-          like, React, and TypeScript. In my role, i have improved user
-          interfaces and user experience, and i have created new features for
-          the platform. I have also implemented integrations with services with
-          Graphql and Rest Api shared and coordinates with the backend team.
-          Writting tests for the code and following the best practices.
+          like, <span class="font-semibold text-amber-300">React</span>, and <span
+            class="font-semibold text-amber-300">TypeScript</span
+          >. In my role, i have improved user interfaces and user experience,
+          and i have created new features for the platform. I have also
+          implemented integrations with services with Graphql and Rest Api
+          shared and coordinates with the backend team. Writting tests for the
+          code and following the best practices.
         </p>
       </div>
-    </div>
-  </article>
+    </li>
+    <li class="flex gap-4">
+      <div class="relative">
+        <div class="h-full w-0.5 bg-gray-700 opacity-50"></div>
+        <div
+          class="w-2 h-2 rounded-full bg-yellow-400 absolute top-2 left-[-3px] opacity-80"
+        >
+        </div>
+      </div>
+      <div>
+        <span class="text-[12px] text-gray-400 mb-2">2019 - 2020</span>
+        <h3 class="text-[18px] font-bold mb-1 text-amber-300">
+          Junior Software Developer
+        </h3>
+        <div class="flex gap-2 text-gray-500 mb-4">
+          <span class="text-[14px] text-gray-400">GrupoCubo</span>
+          <svg
+            width="15"
+            height="15"
+            viewBox="0 0 15 15"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            ><path
+              d="M3.64645 11.3536C3.45118 11.1583 3.45118 10.8417 3.64645 10.6465L10.2929 4L6 4C5.72386 4 5.5 3.77614 5.5 3.5C5.5 3.22386 5.72386 3 6 3L11.5 3C11.6326 3 11.7598 3.05268 11.8536 3.14645C11.9473 3.24022 12 3.36739 12 3.5L12 9.00001C12 9.27615 11.7761 9.50001 11.5 9.50001C11.2239 9.50001 11 9.27615 11 9.00001V4.70711L4.35355 11.3536C4.15829 11.5488 3.84171 11.5488 3.64645 11.3536Z"
+              fill="currentColor"
+              fill-rule="evenodd"
+              clip-rule="evenodd"></path></svg
+          >
+        </div>
+        <p class="text-[14px] text-gray-300">
+          Specializing in Full-Stack development, I have designed and maintained
+          robust frontend modules using Angular (versions 8 through 11) and
+          developed the backend with .NET Core (C#). My work included creating
+          database models and controllers using Entity Framework and SQL Server.
+          Furthermore, I implemented secure JWT-based authentication and focused
+          on optimizing SQL queries, achieving a significant performance
+          improvement.
+        </p>
+      </div>
+    </li>
+  </ul>
 </section>
 
 <style></style>
